--- a/Resources/public/css/AdminLTE.css
+++ b/Resources/public/css/AdminLTE.css
@@ -1856,7 +1856,7 @@ a:focus {
   font-weight: 400;
   font-size: 12px;
 }
-/* Widget: TODO LIST */
+/* Widget:  LIST */
 .todo-list {
   margin: 0;
   padding: 0;
