bugfix: form namespace

--- a/Resources/skeleton/FormType.php.twig
+++ b/Resources/skeleton/FormType.php.twig
@@ -5,7 +5,7 @@
  * Url: https://github.com/symfonyid/SymfonyIdAdminBundle
  */
 
-namespace {{ namespace }}\Form{{ entity_namespace ? '\\' ~ entity_namespace : '' }};
+namespace {{ namespace }}\Form\Type{{ entity_namespace ? '\\' ~ entity_namespace : '' }};
 
 {% block use_statements %}
 use Symfony\Component\Form\AbstractType;
