--- a/Resources/views/Index/change_password.html.twig
+++ b/Resources/views/Index/change_password.html.twig
@@ -20,7 +20,7 @@
 
 {%- block content -%}
     {% spaceless %}
-    {%- if success is defined -%}
+    {%- if success is defined and success -%}
         <div class="modal modal-success success-message">
             <div class="modal-dialog">
                 <div class="modal-content">
@@ -39,7 +39,7 @@
         </div>
     {%- endif -%}
 
-    {%- if errors is defined -%}
+    {%- if errors is defined and errors -%}
         <div class="modal modal-warning error-message">
             <div class="modal-dialog">
                 <div class="modal-content">
@@ -58,7 +58,7 @@
         </div>
     {%- endif -%}
 
-    {%- if current_password_invalid is defined -%}
+    {%- if current_password_invalid is defined and current_password_invalid -%}
         <div class="modal modal-warning password-invalid-message">
             <div class="modal-dialog">
                 <div class="modal-content">
@@ -100,7 +100,7 @@
 
 {%- block javascript -%}
     {% spaceless %}
-    {%- if success is defined -%}
+    {%- if success is defined and success -%}
         <script type="text/javascript">
             jQuery(document).ready(function () {
                 jQuery('.success-message').modal({
@@ -110,7 +110,7 @@
         </script>
     {%- endif -%}
 
-    {%- if errors is defined -%}
+    {%- if errors is defined and errors -%}
         <script type="text/javascript">
             jQuery(document).ready(function () {
                 jQuery('.error-message').modal({
@@ -120,7 +120,7 @@
         </script>
     {%- endif -%}
 
-    {%- if current_password_invalid is defined -%}
+    {%- if current_password_invalid is defined and current_password_invalid -%}
         <script type="text/javascript">
             jQuery(document).ready(function () {
                 jQuery('.password-invalid-message').modal({
