bugfix change password

--- a/Resources/views/Index/change_password.html.twig
+++ b/Resources/views/Index/change_password.html.twig
@@ -32,7 +32,7 @@
                         {{- success -}}
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-primary pull-left" data-dismiss="modal">{{- 'action.close' | trans({}, translation_domain) -}}</button>
+                        <button type="button" class="btn btn-primary password-success pull-left" data-dismiss="modal">{{- 'action.close' | trans({}, translation_domain) -}}</button>
                     </div>
                 </div>
             </div>
@@ -51,7 +51,7 @@
                         {{- 'message.error' | trans({}, translation_domain) -}}
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-danger pull-left" data-dismiss="modal">{{- 'action.close' | trans({}, translation_domain) -}}</button>
+                        <button type="button" class="btn btn-danger password-error pull-left" data-dismiss="modal">{{- 'action.close' | trans({}, translation_domain) -}}</button>
                     </div>
                 </div>
             </div>
@@ -70,7 +70,7 @@
                         {{- 'message.old_password_invalid' | trans({}, translation_domain) -}}
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-danger pull-left" data-dismiss="modal">{{- 'action.close' | trans({}, translation_domain) -}}</button>
+                        <button type="button" class="btn btn-danger password-error pull-left" data-dismiss="modal">{{- 'action.close' | trans({}, translation_domain) -}}</button>
                     </div>
                 </div>
             </div>
@@ -129,5 +129,16 @@
             });
         </script>
     {%- endif -%}
+
+    <script type="text/javascript">
+        jQuery(document).ready(function () {
+            jQuery(document).on('click', '.password-success', function () {
+                jQuery('.back-to-list').trigger('click');
+            });
+            jQuery(document).on('click', '.password-error', function () {
+                window.location = window.location.href;
+            });
+        });
+    </script>
     {% endspaceless %}
 {%- endblock -%}
