--- a/Resources/public/css/style.css
+++ b/Resources/public/css/style.css
@@ -28,6 +28,42 @@ label.required:after {
     font-weight: normal !important;
 }
 
+@media only screen and (min-width: 768px) {
+    .override-group-form-right-margin {
+        margin-right: -15px !important;
+        margin-left: 7px !important;
+    }
+
+    .override-group-form-right-padding {
+        padding-right: 0 !important;
+        padding-left: 0 !important;
+    }
+
+    .override-group-form-margin {
+        margin-right: 15px !important;
+        margin-left: -9px !important;
+    }
+
+    .override-group-form-padding {
+        padding-right: 4px !important;
+        padding-left: 0 !important;
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    .override-group-form-right-margin {
+    }
+
+    .override-group-form-right-padding {
+    }
+
+    .override-group-form-margin {
+    }
+
+    .override-group-form-padding {
+    }
+}
+
 .note-editable {
     min-height: 327px !important;
 }
