--- a/Resources/views/Index/change_password.html.twig
+++ b/Resources/views/Index/change_password.html.twig
@@ -81,15 +81,15 @@
                 <a href="{{- url('home') -}}" class="btn btn-primary pull-right back-to-list">{{- 'action.back_to_home' | trans({}, translation_domain) -}}</a>
             </div>
             <div class="box-body">
-                <form role="form" method="POST">
-                    <div class="box-body with-border">
-                        {{- form_widget(form) -}}
+                {{- form_start(form, {attr: { role: 'form' }}) -}}
+                <div class="box-body with-border">
+                    {%- for field in form.children -%}
+                        {{- form_row(field) -}}
+                    {%- endfor -%}
 
-                        <div class="form-group">
-                            <button type="submit" class="btn btn-primary">{{- 'action.submit' | trans({}, translation_domain) -}}</button>
-                        </div>
-                    </div>
-                </form>
+                    <button type="submit" class="btn btn-success pull-left">{{- 'action.submit' | trans({}, translation_domain) -}}</button>
+                </div>
+                {{- form_end(form) -}}
             </div>
         </div>
     </div>
