--- a/Resources/views/Layout/footer.html.twig
+++ b/Resources/views/Layout/footer.html.twig
@@ -1,7 +1,7 @@
 {% spaceless %}
     <footer class="main-footer">
         <div class="pull-right">
-            <b>Powered by: <i class="fa fa-github"></i> <a href="https://github.com/SymfonyId/AdminBundle" target="_blank">AdminBundle</a> <i class="fa fa-github"></i></b>
+            <b>Powered by:&nbsp;<i class="fa fa-github"></i> <a href="https://github.com/SymfonyId/SymfonyIdAdminBundle" target="_blank">SIAB</a> <i class="fa fa-github"></i></b>
         </div>
         <strong>Copyright &copy; 2015 {{ title }}.</strong> All rights reserved.
     </footer>
