--- a/Resources/views/Layout/footer.html.twig
+++ b/Resources/views/Layout/footer.html.twig
@@ -10,9 +10,9 @@
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 
     {%- javascripts
-        '@SymfonyIdAdminBundle/Resources/public/js/fastclick.js'
-        '@SymfonyIdAdminBundle/Resources/public/js/jquery.slimscroll.min.js'
-        '@SymfonyIdAdminBundle/Resources/public/js/app.min.js'
+        'bundles/symfonyidadmin/js/fastclick.js'
+        'bundles/symfonyidadmin/js/jquery.slimscroll.min.js'
+        'bundles/symfonyidadmin/js/app.min.js'
         'bundles/fosjsrouting/js/router.js'
         'js/fos_js_routes.js'
     -%}
@@ -34,8 +34,12 @@
     {%- endif -%}
 
     {%- if use_autocomplete is defined -%}
-        <script src="{{- asset('bundles/symfonyidadmin/plugins/select2/select2.min.js') -}}" type="text/javascript"></script>
-        <script src="{{- asset('bundles/symfonyidadmin/plugins/select2/select2_locale_' ~ locale ~ '.js') -}}" type="text/javascript"></script>
+        {%- javascripts
+            'bundles/symfonyidadmin/plugins/select2/select2.min.js'
+            'bundles/symfonyidadmin/plugins/select2/select2_locale_' ~ locale ~ '.js'
+        -%}
+        <script src="{{- asset_url -}}" type="text/javascript"></script>
+        {%- endjavascripts -%}
     {%- endif -%}
 
     {%- if use_numeric is defined -%}
