--- a/Resources/skeleton/FormType.php.twig
+++ b/Resources/skeleton/FormType.php.twig
@@ -8,7 +8,7 @@
 namespace {{ namespace }}\Form\Type{{ entity_namespace ? '\\' ~ entity_namespace : '' }};
 
 {% block use_statements %}
-use {{ namespace }}\Entity{{ entity_namespace ? '\\' ~ entity_namespace : '' }}\{{ entity_class }};
+use {{ data_class }};
 use Symfony\Component\Form\AbstractType;
 use Symfony\Component\Form\FormBuilderInterface;
 {% if has_datetime_field %}
